--- a/index.html
+++ b/index.html
@@ -10,33 +10,36 @@
 
 <body>
   <article>
-    <cite>Irina Glabuchek</cite>
-    <h1>About Me</h1>
+    <h1>EdTech Blog</h1>
+    <cite>By Irina Glabuchek</cite>
+    <hr/>
+    <h2>About Me</h2>
     <p>Hello. My name is Irina Glabuchek. My husband and I run a small software development company in Raleigh, NC. He is responsible for the technical part, customer relations, and overal strategy. I primarily focus on our new service - chatbot development. Conversational AI design as a subsector of the rapidly growing AI industry is still at its beginning, and I am eager to learn about it as much as I can. We use IBM's Watson Assistant, which (in my humble opinion) is the most user-friendly solution of the top chatbot-building platforms today. One has to have no coding experience at all to be able to build a chatbot with Watson Assistant (although knowing a programming language will help a lot).</p>
     <p>I am not an educator per se, but sometimes I prepare tutorials and mini-courses for our clients. Below is the list of my favorite edtech tools.</p>
-    <h1>My Favorite EdTech Tools</h1>
+    <hr/>
+    <h2>My Favorite EdTech Tools</h2>
     <p>I have devided my favorite edtech tools into 4 broad categories: <em>LMS, Gamification Platforms, Communication Tools,</em> and <em>Whiteboard Apps</em>.</p>
-    <h2>Learning Management Systems (LMS)</h2>
+    <h3>Learning Management Systems (LMS)</h3>
     <ul>
       <li><strong>Teachable.</strong> This online platform is easy to learn and personalize</li>
       <li><strong>Storyline 360.</strong> The classics of e-learning systems.</li>
       <li><strong>Canvas.</strong> Another "classic" LMS with a great number of features.</li>
       <li><strong>Wakelet.</strong> This e-learning platform allows to save and organize all kinds of online content.</li>
     </ul>
-    <h2>Gamification Platforms</h2>
+    <h3>Gamification Platforms</h3>
     <ul>
       <li><strong>Gimkit.</strong> An innovative quiz learning platform made as an engaging gameplay.</li>
       <li><strong>Kahoot!</strong> One of the most popular game-based learning platforms. It has easy-to-use features and a free version.</li>
       <li><strong>Go Noodle.</strong> This platform features hundreds of videos designed to get kids moving.</li>
       <li><strong>Book Creator.</strong> This is a great tool for students to explore their creative side. The app alows making ebooks on an iPad.</li>
     </ul>
-    <h2>Communication Tools</h2>
+    <h3>Communication Tools</h3>
     <ul>
       <li><strong>Remind.</strong> Classroom messaging app for quick and efficient comunication between teachers, students, and parents.</li>
       <li><strong>Loop.</strong> This app is for teachers to collect structured feedback from students. It can be integrated with Google Clasroom./li>
       <li><strong>Living Tree.</strong> This is a great social networking platform for a school community.</li>
     </ul>
-    <h2>Whiteboard Apps</h2>
+    <h3>Whiteboard Apps</h3>
     <ul>
       <li><strong>GoBoard.</strong> This is a free online tool that combines video chatting and an interactive canvas.</li>
       <li><strong>ShowMe.</strong> A free, easy-to-use whiteboard app for an iPad.</li>
