HTML Week 2 Assignment - with updates

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 </head>
 
 <body>
-  <article>
-    <h1>EdTech Blog</h1>
+    <h1>EdTech Tools</h1>
     <cite>By Irina Glabuchek</cite>
     <hr/>
     <h2>About Me</h2>
@@ -45,7 +44,6 @@
       <li><strong>ShowMe.</strong> A free, easy-to-use whiteboard app for an iPad.</li>
       <li><strong>Explain Everything.</strong> An interactive app that allows you to animate, record, annotate, and collaborate in real time.</li>
     </ul>
-  </article>
 </body>
 
 </html>
