--- a/page2.html
+++ b/page2.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Learning Management Systems</h1>
-    <img src="/computer-room-1542353.jpg" alt="Four Computers on a Desk" style="width:25%; height: auto;" />
+    <img src="computer-room-1542353.jpg" alt="Four Computers on a Desk" style="width:25%; height: auto;" />
     <p>According to <a href="https://en.wikipedia.org/wiki/Learning_Management" target="_blank">Wikipedia</a>, Learning Management System (LMS) is a "software application or web-based technology that ranges from managing trining and training records to distributing courses to employees/students over the Internet."</p>
     <p>On my <a href="index.html">Home Page</a> I have provided the list of my favorite LMS. To see the full list of the best e-learning systems, please visit <a href="https://elearningindustry.com/directory/software-categories/learning-management-systems" target="_blank">ELearning Industry</a>.</p>
     </body>
