Updates to Unit 3 project.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <li><strong>Canvas.</strong> Another "classic" LMS with a great number of features.</li>
       <li><strong>Wakelet.</strong> This e-learning platform allows to save and organize all kinds of online content.</li>
     </ul>
+    <em>To read more about Learning Management Systems, go to <a href="page2.html">Page 2</a></em>
     <h3>Gamification Platforms</h3>
     <ul>
       <li><strong>Gimkit.</strong> An innovative quiz learning platform made as an engaging gameplay.</li>
@@ -44,6 +45,7 @@
       <li><strong>ShowMe.</strong> A free, easy-to-use whiteboard app for an iPad.</li>
       <li><strong>Explain Everything.</strong> An interactive app that allows you to animate, record, annotate, and collaborate in real time.</li>
     </ul>
+    <a href="page2.html">Go to Page 2</a>
 </body>
 
 </html>
