--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="css/stylesheet.css">
 </head>
 
 <body>
@@ -19,7 +20,7 @@
     <h2>My Favorite EdTech Tools</h2>
     <p>I have devided my favorite edtech tools into 4 broad categories: <em>LMS, Gamification Platforms, Communication Tools,</em> and <em>Whiteboard Apps</em>.</p>
     <h3>Learning Management Systems (LMS)</h3>
-    <ul>
+    <ul class="list">
       <li><strong>Teachable.</strong> This online platform is easy to learn and personalize</li>
       <li><strong>Storyline 360.</strong> The classics of e-learning systems.</li>
       <li><strong>Canvas.</strong> Another "classic" LMS with a great number of features.</li>
@@ -45,7 +46,33 @@
       <li><strong>ShowMe.</strong> A free, easy-to-use whiteboard app for an iPad.</li>
       <li><strong>Explain Everything.</strong> An interactive app that allows you to animate, record, annotate, and collaborate in real time.</li>
     </ul>
-    <a href="page2.html">Go to Page 2</a>
+    <table>
+      <thead>
+        <tr>
+          <th>Tool</th>
+          <th>Preference Rating</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Learning Management Systems</td>
+          <td>5</td>
+        </tr>
+        <tr>
+          <td>Gamification Platforms</td>
+          <td>4</td>
+        </tr>
+        <tr>
+          <td>Communication Tools</td>
+          <td>4</td>
+        </tr>
+        <tr>
+          <td>Whiteboard Apps</td>
+          <td>3</td>
+        </tr>
+      </tbody>
+    </table>
+    <a href="page2.html" class="button-link">Go to Page 2</a>
 </body>
 
 </html>
