--- a/LMS.html
+++ b/LMS.html
@@ -10,11 +10,29 @@
 </head>
 
 <body>
-    <h1>Learning Management Systems</h1>
+  <nav class="sticky">
+    <ul>
+      <li><a href="Home.html">Home</a></li>
+      <li><a href="LMS.html">Learning Management Systems</a></li>
+      <li><a href="Gamification.html">Gamification Platforms</a></li>
+      <li><a href="Communication.html">Class Communication Tools</a></li>
+      <li><a href="Whiteboards.html">Whiteboard Apps</a></li>
+    </ul>
+  </nav>
+  <h1>Learning Management Systems</h1>
     <img id="main-image" src="computer-room-1542353.jpg" alt="Four Computers on a Desk" style="width:25%; height: auto;" />
     <p>According to <a href="https://en.wikipedia.org/wiki/Learning_Management" target="_blank">Wikipedia</a>, Learning Management System (LMS) is a "software application or web-based technology that ranges from managing trining and training records to distributing courses to employees/students over the Internet."</p>
     <p>On my <a href="index.html">Home Page</a> I have provided the list of my favorite LMS. To see the full list of the best e-learning systems, please visit <a href="https://elearningindustry.com/directory/software-categories/learning-management-systems" target="_blank">ELearning Industry</a>.</p>
-    <a href="index.html" class="button-link">Go Home</a>
+   <p>Below is the list of my most favorite LMS platforms:</p>
+    <ul>
+      <li><strong>Teachable.</strong> This online platform is easy to learn and
+        personalize</li>
+      <li><strong>Storyline 360.</strong> The classics of e-learning systems.</li>
+      <li><strong>Canvas.</strong> Another "classic" LMS with a great number of
+        features.</li>
+      <li><strong>Wakelet.</strong> This e-learning platform allows to save and
+        organize all kinds of online content.</li>
+    </ul>
     </body>
 
     </html>
