--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <nav class="sticky">
     <ul>
-      <li><a href="Home.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="LMS.html">Learning Management Systems</a></li>
       <li><a href="Gamification.html">Gamification Platforms</a></li>
       <li><a href="Communication.html">Class Communication Tools</a></li>
