--- a/LMS.html
+++ b/LMS.html
@@ -6,33 +6,78 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet"
+    href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+    crossorigin="anonymous">
   <link rel="stylesheet" href="css/stylesheet.css">
 </head>
 
 <body>
-  <nav class="sticky">
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="LMS.html">Learning Management Systems</a></li>
-      <li><a href="Gamification.html">Gamification Platforms</a></li>
-      <li><a href="Communication.html">Class Communication Tools</a></li>
-      <li><a href="Whiteboards.html">Whiteboard Apps</a></li>
+  <nav class="sticky navbar navbar-expand-lg navbar-light bg-light">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item"><a class="nav-link" href="index.html">Home</a>
+      </li>
+      <li class="nav-item active"><a class="nav-link" href="LMS.html">Learning
+          Management Systems</a></li>
+      <li class="nav-item"><a class="nav-link"
+          href="Gamification.html">Gamification Platforms</a></li>
+      <li class="nav-item"><a class="nav-link" href="Communication.html">Class
+          Communication Tools</a></li>
+      <li class="nav-item"><a class="nav-link"
+          href="Whiteboards.html">Whiteboard Apps</a></li>
     </ul>
   </nav>
-  <h1>Learning Management Systems</h1>
-    <img id="main-image" src="computer-room-1542353.jpg" alt="Four Computers on a Desk" style="width:25%; height: auto;" />
-    <p>According to <a href="https://en.wikipedia.org/wiki/Learning_Management" target="_blank">Wikipedia</a>, Learning Management System (LMS) is a "software application or web-based technology that ranges from managing trining and training records to distributing courses to employees/students over the Internet."</p>
-    <p>On my <a href="index.html">Home Page</a> I have provided the list of my favorite LMS. To see the full list of the best e-learning systems, please visit <a href="https://elearningindustry.com/directory/software-categories/learning-management-systems" target="_blank">ELearning Industry</a>.</p>
-   <p>Below is the list of my most favorite LMS platforms:</p>
-    <ul>
-      <li><strong>Teachable.</strong> This online platform is easy to learn and
-        personalize</li>
-      <li><strong>Storyline 360.</strong> The classics of e-learning systems.</li>
-      <li><strong>Canvas.</strong> Another "classic" LMS with a great number of
-        features.</li>
-      <li><strong>Wakelet.</strong> This e-learning platform allows to save and
-        organize all kinds of online content.</li>
-    </ul>
-    </body>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <h1>Learning Management Systems</h1>
+        <img id="main-image" src="computer-room-1542353.jpg"
+          alt="Four Computers on a Desk" style="width:25%; height: auto;" class="mt-3" />
+        <p class="mt-3">According to <a
+            href="https://en.wikipedia.org/wiki/Learning_Management"
+            target="_blank">Wikipedia</a>, Learning Management System (LMS) is a
+          "software application or web-based technology that ranges from
+          managing
+          trining and training records to distributing courses to
+          employees/students
+          over the Internet."</p>
+        <p>On my <a href="index.html">Home Page</a> I have provided the list of
+          my
+          favorite LMS. To see the full list of the best e-learning systems,
+          please
+          visit <a
+            href="https://elearningindustry.com/directory/software-categories/learning-management-systems"
+            target="_blank">ELearning Industry</a>.</p>
+        <p>Below is the list of my most favorite LMS platforms:</p>
+        <ul>
+          <li><strong>Teachable.</strong> This online platform is easy to learn
+            and
+            personalize</li>
+          <li><strong>Storyline 360.</strong> The classics of e-learning
+            systems.</li>
+          <li><strong>Canvas.</strong> Another "classic" LMS with a great number
+            of
+            features.</li>
+          <li><strong>Wakelet.</strong> This e-learning platform allows to save
+            and
+            organize all kinds of online content.</li>
+        </ul>
+      </div>
+    </div>
+  </div>
 
-    </html>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script
+    src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+</body>
+
+</html>
