--- a/Communication.html
+++ b/Communication.html
@@ -6,29 +6,61 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet"
+    href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+    crossorigin="anonymous">
   <link rel="stylesheet" href="css/stylesheet.css">
 </head>
 
 <body>
-  <nav class="sticky">
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="LMS.html">Learning Management Systems</a></li>
-      <li><a href="Gamification.html">Gamification Platforms</a></li>
-      <li><a href="Communication.html">Class Communication Tools</a></li>
-      <li><a href="Whiteboards.html">Whiteboard Apps</a></li>
+  <nav class="sticky navbar navbar-expand-lg navbar-light bg-light">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item"><a class="nav-link" href="index.html">Home</a>
+      </li>
+      <li class="nav-item"><a class="nav-link" href="LMS.html">Learning
+          Management Systems</a></li>
+      <li class="nav-item"><a class="nav-link"
+          href="Gamification.html">Gamification Platforms</a></li>
+      <li class="nav-item active"><a class="nav-link"
+          href="Communication.html">Class
+          Communication Tools</a></li>
+      <li class="nav-item"><a class="nav-link"
+          href="Whiteboards.html">Whiteboard Apps</a></li>
     </ul>
   </nav>
-  <h1>Class Communication Tools</h1>
-  <p>Below is the list of my favorite class communication tools:</p>
-  <ul>
-    <li><strong>Remind.</strong> Classroom messaging app for quick and efficient
-      comunication between teachers, students, and parents.</li>
-    <li><strong>Loop.</strong> This app is for teachers to collect structured
-      feedback from students. It can be integrated with Google Clasroom./li>
-    <li><strong>Living Tree.</strong> This is a great social networking platform
-      for a school community.</li>
-  </ul>
-    </body>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <h1>Class Communication Tools</h1>
+        <p>Below is the list of my favorite class communication tools:</p>
+        <ul>
+          <li><strong>Remind.</strong> Classroom messaging app for quick and
+            efficient
+            comunication between teachers, students, and parents.</li>
+          <li><strong>Loop.</strong> This app is for teachers to collect
+            structured
+            feedback from students. It can be integrated with Google
+            Clasroom./li>
+          <li><strong>Living Tree.</strong> This is a great social networking
+            platform
+            for a school community.</li>
+        </ul>
+      </div>
+    </div>
+  </div>
 
-    </html>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script
+    src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+</body>
+
+</html>
