--- a/index.html
+++ b/index.html
@@ -6,108 +6,163 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet"
+    href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+    crossorigin="anonymous">
   <link rel="stylesheet" href="css/stylesheet.css">
 </head>
 
 <body>
-  <nav class="sticky">
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="LMS.html">Learning Management Systems</a></li>
-      <li><a href="Gamification.html">Gamification Platforms</a></li>
-      <li><a href="Communication.html">Class Communication Tools</a></li>
-      <li><a href="Whiteboards.html">Whiteboard Apps</a></li>
+  <nav class="sticky navbar navbar-expand-lg navbar-light bg-light">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active"><a class="nav-link" href="index.html">Home</a>
+      </li>
+      <li class="nav-item"><a class="nav-link" href="LMS.html">Learning
+          Management Systems</a></li>
+      <li class="nav-item"><a class="nav-link"
+          href="Gamification.html">Gamification Platforms</a></li>
+      <li class="nav-item"><a class="nav-link" href="Communication.html">Class
+          Communication Tools</a></li>
+      <li class="nav-item"><a class="nav-link"
+          href="Whiteboards.html">Whiteboard Apps</a></li>
     </ul>
   </nav>
-  <h1>EdTech Tools</h1>
-  <cite>By Irina Glabuchek</cite>
-  <hr />
-  <h2>About Me</h2>
-  <p>Hello. My name is Irina Glabuchek. My husband and I run a small software
-    development company in Raleigh, NC. He is responsible for the technical
-    part, customer relations, and overal strategy. I primarily focus on our new
-    service - chatbot development. Conversational AI design as a subsector of
-    the rapidly growing AI industry is still at its beginning, and I am eager to
-    learn about it as much as I can. We use IBM's Watson Assistant, which (in my
-    humble opinion) is the most user-friendly solution of the top
-    chatbot-building platforms today. One has to have no coding experience at
-    all to be able to build a chatbot with Watson Assistant (although knowing a
-    programming language will help a lot).</p>
-  <p>I am not an educator per se, but sometimes I prepare tutorials and
-    mini-courses for our clients. Below is the list of my favorite edtech tools.
-  </p>
-  <hr />
-  <h2>My Favorite EdTech Tools</h2>
-  <p>I have devided my favorite edtech tools into 4 broad categories: <em>LMS,
-      Gamification Platforms, Communication Tools,</em> and <em>Whiteboard
-      Apps</em>.</p>
-  <h3>Learning Management Systems (LMS)</h3>
-  <ul>
-    <li><strong>Teachable.</strong> This online platform is easy to learn and
-      personalize</li>
-    <li><strong>Storyline 360.</strong> The classics of e-learning systems.</li>
-    <li><strong>Canvas.</strong> Another "classic" LMS with a great number of
-      features.</li>
-    <li><strong>Wakelet.</strong> This e-learning platform allows to save and
-      organize all kinds of online content.</li>
-  </ul>
-  <em>To read more about Learning Management Systems, go to <a
-      href="LMS.html">LMS</a></em>
-  <h3>Gamification Platforms</h3>
-  <ul>
-    <li><strong>Gimkit.</strong> An innovative quiz learning platform made as an
-      engaging gameplay.</li>
-    <li><strong>Kahoot!</strong> One of the most popular game-based learning
-      platforms. It has easy-to-use features and a free version.</li>
-    <li><strong>Go Noodle.</strong> This platform features hundreds of videos
-      designed to get kids moving.</li>
-    <li><strong>Book Creator.</strong> This is a great tool for students to
-      explore their creative side. The app alows making ebooks on an iPad.</li>
-  </ul>
-  <h3>Communication Tools</h3>
-  <ul>
-    <li><strong>Remind.</strong> Classroom messaging app for quick and efficient
-      comunication between teachers, students, and parents.</li>
-    <li><strong>Loop.</strong> This app is for teachers to collect structured
-      feedback from students. It can be integrated with Google Clasroom./li>
-    <li><strong>Living Tree.</strong> This is a great social networking platform
-      for a school community.</li>
-  </ul>
-  <h3>Whiteboard Apps</h3>
-  <ul>
-    <li><strong>GoBoard.</strong> This is a free online tool that combines video
-      chatting and an interactive canvas.</li>
-    <li><strong>ShowMe.</strong> A free, easy-to-use whiteboard app for an iPad.
-    </li>
-    <li><strong>Explain Everything.</strong> An interactive app that allows you
-      to animate, record, annotate, and collaborate in real time.</li>
-  </ul>
-  <table class="rating">
-    <thead>
-      <tr>
-        <th>Tool</th>
-        <th>Preference Rating</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Learning Management Systems</td>
-        <td>5</td>
-      </tr>
-      <tr>
-        <td>Gamification Platforms</td>
-        <td>4</td>
-      </tr>
-      <tr>
-        <td>Communication Tools</td>
-        <td>4</td>
-      </tr>
-      <tr>
-        <td>Whiteboard Apps</td>
-        <td>3</td>
-      </tr>
-    </tbody>
-  </table>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+
+
+        <h1>EdTech Tools</h1>
+        <cite>By Irina Glabuchek</cite>
+        <hr />
+        <h2>About Me</h2>
+        <p>Hello. My name is Irina Glabuchek. My husband and I run a small
+          software
+          development company in Raleigh, NC. He is responsible for the
+          technical
+          part, customer relations, and overal strategy. I primarily focus on
+          our new
+          service - chatbot development. Conversational AI design as a subsector
+          of
+          the rapidly growing AI industry is still at its beginning, and I am
+          eager to
+          learn about it as much as I can. We use IBM's Watson Assistant, which
+          (in my
+          humble opinion) is the most user-friendly solution of the top
+          chatbot-building platforms today. One has to have no coding experience
+          at
+          all to be able to build a chatbot with Watson Assistant (although
+          knowing a
+          programming language will help a lot).</p>
+        <p>I am not an educator per se, but sometimes I prepare tutorials and
+          mini-courses for our clients. Below is the list of my favorite edtech
+          tools.
+        </p>
+        <hr />
+        <h2>My Favorite EdTech Tools</h2>
+        <p>I have devided my favorite edtech tools into 4 broad categories:
+          <em>LMS,
+            Gamification Platforms, Communication Tools,</em> and <em>Whiteboard
+            Apps</em>.</p>
+        <h3>Learning Management Systems (LMS)</h3>
+        <ul>
+          <li><strong>Teachable.</strong> This online platform is easy to learn
+            and
+            personalize</li>
+          <li><strong>Storyline 360.</strong> The classics of e-learning
+            systems.</li>
+          <li><strong>Canvas.</strong> Another "classic" LMS with a great number
+            of
+            features.</li>
+          <li><strong>Wakelet.</strong> This e-learning platform allows to save
+            and
+            organize all kinds of online content.</li>
+        </ul>
+        <em>To read more about Learning Management Systems, go to <a
+            href="LMS.html">LMS</a></em>
+        <h3>Gamification Platforms</h3>
+        <ul>
+          <li><strong>Gimkit.</strong> An innovative quiz learning platform made
+            as an
+            engaging gameplay.</li>
+          <li><strong>Kahoot!</strong> One of the most popular game-based
+            learning
+            platforms. It has easy-to-use features and a free version.</li>
+          <li><strong>Go Noodle.</strong> This platform features hundreds of
+            videos
+            designed to get kids moving.</li>
+          <li><strong>Book Creator.</strong> This is a great tool for students
+            to
+            explore their creative side. The app alows making ebooks on an iPad.
+          </li>
+        </ul>
+        <h3>Communication Tools</h3>
+        <ul>
+          <li><strong>Remind.</strong> Classroom messaging app for quick and
+            efficient
+            comunication between teachers, students, and parents.</li>
+          <li><strong>Loop.</strong> This app is for teachers to collect
+            structured
+            feedback from students. It can be integrated with Google
+            Clasroom./li>
+          <li><strong>Living Tree.</strong> This is a great social networking
+            platform
+            for a school community.</li>
+        </ul>
+        <h3>Whiteboard Apps</h3>
+        <ul>
+          <li><strong>GoBoard.</strong> This is a free online tool that combines
+            video
+            chatting and an interactive canvas.</li>
+          <li><strong>ShowMe.</strong> A free, easy-to-use whiteboard app for an
+            iPad.
+          </li>
+          <li><strong>Explain Everything.</strong> An interactive app that
+            allows you
+            to animate, record, annotate, and collaborate in real time.</li>
+        </ul>
+        <table class="rating">
+          <thead>
+            <tr>
+              <th>Tool</th>
+              <th>Preference Rating</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Learning Management Systems</td>
+              <td>5</td>
+            </tr>
+            <tr>
+              <td>Gamification Platforms</td>
+              <td>4</td>
+            </tr>
+            <tr>
+              <td>Communication Tools</td>
+              <td>4</td>
+            </tr>
+            <tr>
+              <td>Whiteboard Apps</td>
+              <td>3</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script
+    src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
