--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
             <a class="nav-link" href="#">Category</a>
           </li>
         </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input id="search-text" class="form-control mr-sm-2" type="search"
+            placeholder="Search" aria-label="Search">
+          <button id="search" class="btn btn-outline-primary my-2 my-sm-0"
+            type="button">Search</button>
+        </form>
       </div>
     </nav>
     <div class="row align-items-center my-auto">
@@ -486,8 +492,35 @@
       </div>
     </div>
   </div>
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+
+  <div class="modal fade" id="modalSearch" tabindex="-1"
+    aria-labelledby="modalSearchLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="modalSearchLabel">Search Results
+          </h5>
+          <button type="button" class="close" data-dismiss="modal"
+            aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p id="search-results-title"></p>
+          <p id="search-results-author"></p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary"
+            data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script> -->
+  <script src="https://code.jquery.com/jquery-3.6.0.js"
+    integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
     crossorigin="anonymous"></script>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
@@ -495,7 +528,28 @@
     crossorigin="anonymous"></script>
 
   <script>
+    var key = "AIzaSyD6TDHrXIR0a9jE2WOZZ032U6vT3eTFli4";
+    var api = "https://www.googleapis.com/books/v1/volumes?q=";
+
     $(document).ready(function () {
+
+      $("#search").click(function () {
+        var query = $("#search-text").val();
+        var url = api + query + "&key=" + key;
+        var data = $.get(url);
+        //Function that runs when the API runs successfully
+        data.done(function (response) {
+          //Because the API returns an array, get the first element.
+          console.log(response);
+          var info0 = response.items[0].volumeInfo;
+          $("#search-results-title").html(info0.title);
+          $("#search-results-author").html(info0.authors[0]);
+          $("#modalSearch").modal();
+        });
+
+      });
+
+
       $(".hidden").hide();
       $("#btnChildren").click(function () {
         $(".hidden").hide();
