--- a/asia.html
+++ b/asia.html
@@ -70,66 +70,38 @@
         </nav>
     </header>
 
-    <section id="the-dangerous-art-of-blending-in" class="container pt-5">
-        <div class="card mb-3">
-            <div class="row no-gutters">
-                <div class="col-md-4">
-                    <img src="/images/the-dangerous-art-of-blending.jpg"
-                        class="img-fluid"
-                        alt="The Dangerous Art of Blending In, Book Cover">
-                </div>
+    <section id="asia" class="container py-5">
+        <div class="row no-gutters">
+
                 <div class="col-md-8">
-                    <div class="card-body">
-                        <h1 class="card-title">The Dangerous Art of Blending In
-                        </h1>
-                        <h2 class="card-subtitle">by Angelo Surmelis</h2>
-                        <p class="card-text"><a href="/teens-books.html"
-                                class="badge badge-success">TEENS: AGES 14 &
-                                UP</a></p>
-                        <p class="card-text">Evan Panos's strict immigrant Greek
-                            mother
-                            sees
-                            him as a disappointment. His workaholic father is a
-                            staunch
-                            believer
-                            in avoiding any kind of conflict. And his best
-                            friend, Henry,
-                            has
-                            somehow become distractingly attractive over the
-                            summer. His
-                            only
-                            escape is drawing, in an abandoned monastery that
-                            feels as
-                            lonely
-                            as
-                            he is. As things escalate, Evan has to decide how to
-                            find his
-                            voice
-                            in a world where he has survived so long by being
-                            silent.</p>
-                        <p class="card-text">This is a powerful and revelatory
-                            coming-of-age
-                            novel based on the author’s own childhood, about a
-                            boy who
-                            learns
-                            to
-                            step into his light.</p>
-                    </div>
+                    <h1 class="pb-4">Books from Asia</h1>
+                    <p class="lead">Please select a country:</p>
+                    <div class="accordion" id="accordionCountries">
+                        <div class="card">
+                          <div class="card-header" id="countryOne">
+                            <h2 class="card-title mb-0">
+                              <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                                China
+                              </button>
+                            </h2>
+                          </div>
+                      
+                          <div id="collapseOne" class="collapse" aria-labelledby="countryOne" data-parent="#accordionCountries">
+                            <div class="card-body">
+                                <ul class="list-group list-group-flush">
+                                    <li class="list-group-item"><span><a href="/adults-books.html" class="badge badge-secondary">ADULTS</a></span><h3 class="card-title"><a href="/books/adults/the-three-body-problem-by-cixin-liu.html">
+                                        The Three-Body Problem</a></h3>
+                                        <h4 class="card-subtitle">by Cixin Liu</h4>
+                                     </li>
+                                </ul>
+                            </div>
+                          </div>
+                        </div>
+
+                      </div>
                 </div>
-            </div>
-        </div>
-        <ul class="list-group list-group-flush">
-            <li class="list-group-item"><a href="/fiction-books.html">Realistic Fiction</a></li>
-            <li class="list-group-item"><a href="/north-america.html">United States</a></li>
-        </ul>
-        <hr>
-        <div class="mt-3 mb-5">
-            <a href="https://www.worldcat.org/search?q=The+Dangerous+Art+of+Blending+In+by+Angelo+Surmelis&qt=owc_search" target="_blank" class="btn btn-secondary" role="button">Borrow from a
-                library</a>
-            <br class="d-block d-sm-none">
-            <a href="https://www.amazon.com/Dangerous-Art-Blending-Angelo-Surmelis/dp/0062659014/ref=sr_1_1?dchild=1&keywords=The+Dangerous+Art+of+Blending+In+by+Angelo+Surmelis&qid=1620516063&s=books&sr=1-1" target="_blank" class="ml-0 ml-sm-3 mt-3 mt-sm-0 btn btn-primary"
-                role="button">Buy on Amazon</a>
-        </div>
+      </div>
+            
     </section>
 
     <section id="section-footer" class="py-5">
