--- a/books/adults/i-know-why-the-caged-bird-sings-by-maya-angelou.html
+++ b/books/adults/i-know-why-the-caged-bird-sings-by-maya-angelou.html
@@ -10,7 +10,7 @@
         href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="/main.css">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
             </button>
             <div class="collapse navbar-collapse" id="main-navigation">
                 <a class="navbar-brand ml-0 ml-md-5"
-                    href="index.html"><strong>PANHUMAN</strong>
+                    href="/index.html"><strong>PANHUMAN</strong>
                     BOOKS</a>
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item dropdown">
@@ -31,9 +31,9 @@
                             data-toggle="dropdown" href="#" role="button"
                             aria-haspopup="true" aria-expanded="false">Age</a>
                             <div class="dropdown-menu">
-                                <a class="dropdown-item" href="children-books.html">Children</a>
-                                <a class="dropdown-item" href="teens-books.html">Teens</a>
-                                <a class="dropdown-item" href="adults-books.html">Adults</a>
+                                <a class="dropdown-item" href="/children-books.html">Children</a>
+                                <a class="dropdown-item" href="/teens-books.html">Teens</a>
+                                <a class="dropdown-item" href="/adults-books.html">Adults</a>
                               </div>
                     </li>
                     <li class="nav-item dropdown">
@@ -41,9 +41,9 @@
                             data-toggle="dropdown" href="#" role="button"
                             aria-haspopup="true" aria-expanded="false">Genre</a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Biography</a>
-                            <a class="dropdown-item" href="#">Fiction</a>
-                            <a class="dropdown-item" href="#">Poetry</a>
+                            <a class="dropdown-item" href="/biography-books.html">Biography</a>
+                            <a class="dropdown-item" href="/fiction-books.html">Fiction</a>
+                            <a class="dropdown-item" href="/poetry-books.html">Poetry</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
@@ -52,9 +52,9 @@
                             aria-haspopup="true"
                             aria-expanded="false">Continent</a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Africa</a>
-                            <a class="dropdown-item" href="#">Asia</a>
-                            <a class="dropdown-item" href="#">North America</a>
+                            <a class="dropdown-item" href="/africa.html">Africa</a>
+                            <a class="dropdown-item" href="/asia.html">Asia</a>
+                            <a class="dropdown-item" href="/north-america.html">North America</a>
                         </div>
                     </li>
                 </ul>
@@ -74,7 +74,7 @@
         <div class="card mb-3">
             <div class="row no-gutters">
                 <div class="col-md-4">
-                    <img src="images/i-know-why-the-caged-bird-sings.jpg"
+                    <img src="/images/i-know-why-the-caged-bird-sings.jpg"
                         class="img-fluid"
                         alt="I Know Why The Caged Bird Sings, Book Cover">
                 </div>
@@ -83,7 +83,7 @@
                         <h1 class="card-title">I Know Why The Caged Bird Sings
                         </h1>
                         <h2 class="card-subtitle">by Maya Angelou</h2>
-                        <p class="card-text"><a href="#"
+                        <p class="card-text"><a href="/adults-books.html"
                                 class="badge badge-secondary">ADULTS</a></p>
                         <p class="card-text">Maya Angelou’s debut memoir is a
                             modern
@@ -110,15 +110,15 @@
             </div>
         </div>
         <ul class="list-group list-group-flush">
-            <li class="list-group-item"><a href="#">Autobiography</a></li>
-            <li class="list-group-item"><a href="#">North America</a></li>
+            <li class="list-group-item"><a href="/biography-books.html">Autobiography</a></li>
+            <li class="list-group-item"><a href="/north-america.html">United States</a></li>
         </ul>
         <hr>
         <div class="mt-3 mb-5">
-            <a href="#" class="btn btn-secondary" role="button">Borrow from a
+            <a href="https://www.worldcat.org/title/i-know-why-the-caged-bird-sings/oclc/1032280144&referer=brief_results" class="btn btn-secondary" target="_blank" role="button">Borrow from a
                 library</a>
             <br class="d-block d-sm-none">
-            <a href="#" class="ml-0 ml-sm-3 mt-3 mt-sm-0 btn btn-primary"
+            <a href="https://www.amazon.com/Know-Caged-Sings-Angelou-1984-01-26/dp/B017PO2SX0/ref=sr_1_2?dchild=1&keywords=I+Know+Why+The+Caged+Bird+Sings&qid=1620515350&s=books&sr=1-2" target="_blank" class="ml-0 ml-sm-3 mt-3 mt-sm-0 btn btn-primary"
                 role="button">Buy on Amazon</a>
         </div>
     </section>
@@ -170,7 +170,7 @@
         integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
         crossorigin="anonymous"></script>
 
-    <script src="js/scripts.js"></script>
+    <script src="/js/scripts.js"></script>
 
 </body>
 
