--- a/books/adults/things-fall-apart-by-chinua-achebe.html
+++ b/books/adults/things-fall-apart-by-chinua-achebe.html
@@ -10,7 +10,7 @@
         href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="/main.css">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
             </button>
             <div class="collapse navbar-collapse" id="main-navigation">
                 <a class="navbar-brand ml-0 ml-md-5"
-                    href="index.html"><strong>PANHUMAN</strong>
+                    href="/index.html"><strong>PANHUMAN</strong>
                     BOOKS</a>
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item dropdown">
@@ -31,9 +31,9 @@
                             data-toggle="dropdown" href="#" role="button"
                             aria-haspopup="true" aria-expanded="false">Age</a>
                             <div class="dropdown-menu">
-                                <a class="dropdown-item" href="children-books.html">Children</a>
-                                <a class="dropdown-item" href="teens-books.html">Teens</a>
-                                <a class="dropdown-item" href="adults-books.html">Adults</a>
+                                <a class="dropdown-item" href="/children-books.html">Children</a>
+                                <a class="dropdown-item" href="/teens-books.html">Teens</a>
+                                <a class="dropdown-item" href="/adults-books.html">Adults</a>
                               </div>
                     </li>
                     <li class="nav-item dropdown">
@@ -41,9 +41,9 @@
                             data-toggle="dropdown" href="#" role="button"
                             aria-haspopup="true" aria-expanded="false">Genre</a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Biography</a>
-                            <a class="dropdown-item" href="#">Fiction</a>
-                            <a class="dropdown-item" href="#">Poetry</a>
+                            <a class="dropdown-item" href="/biography-books.html">Biography</a>
+                            <a class="dropdown-item" href="/fiction-books.html">Fiction</a>
+                            <a class="dropdown-item" href="/poetry-books.html">Poetry</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
@@ -52,9 +52,9 @@
                             aria-haspopup="true"
                             aria-expanded="false">Continent</a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Africa</a>
-                            <a class="dropdown-item" href="#">Asia</a>
-                            <a class="dropdown-item" href="#">North America</a>
+                            <a class="dropdown-item" href="/africa.html">Africa</a>
+                            <a class="dropdown-item" href="/asia.html">Asia</a>
+                            <a class="dropdown-item" href="/north-america.html">North America</a>
                         </div>
                     </li>
                 </ul>
@@ -74,14 +74,14 @@
         <div class="card mb-3">
             <div class="row no-gutters">
                 <div class="col-md-4">
-                    <img src="images/things-fall-apart.jpg" class="img-fluid"
+                    <img src="/images/things-fall-apart.jpg" class="img-fluid"
                         alt="Things Fall Apart, Book Cover">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
                         <h1 class="card-title">Things Fall Apart</h1>
                         <h2 class="card-subtitle">by Chinua Achebe</h2>
-                        <p class="card-text"><a href="#"
+                        <p class="card-text"><a href="/adults-books.html"
                                 class="badge badge-secondary">ADULTS</a></p>
                         <p class="card-text">Translated into 57 languages,
                             <em>Things
@@ -103,15 +103,15 @@
             </div>
         </div>
         <ul class="list-group list-group-flush">
-            <li class="list-group-item"><a href="#">Historical fiction</a></li>
-            <li class="list-group-item"><a href="#">Africa</a></li>
+            <li class="list-group-item"><a href="/fiction-books.html">Historical Fiction</a></li>
+            <li class="list-group-item"><a href="/africa.html">Nigeria</a></li>
         </ul>
         <hr>
         <div class="mt-3 mb-5">
-            <a href="#" class="btn btn-secondary" role="button">Borrow from a
+            <a href="https://www.worldcat.org/title/things-fall-apart/oclc/764526273&referer=brief_results" target="_blank" class="btn btn-secondary" role="button">Borrow from a
                 library</a>
             <br class="d-block d-sm-none">
-            <a href="#" class="ml-0 ml-sm-3 mt-3 mt-sm-0 btn btn-primary"
+            <a href="https://www.amazon.com/Things-Fall-Apart-Chinua-Achebe/dp/0385474547/ref=sr_1_1?dchild=1&keywords=Things+Fall+Apart&qid=1620515680&s=books&sr=1-1" target="_blank" class="ml-0 ml-sm-3 mt-3 mt-sm-0 btn btn-primary"
                 role="button">Buy on Amazon</a>
         </div>
     </section>
@@ -163,7 +163,7 @@
         integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
         crossorigin="anonymous"></script>
 
-    <script src="js/scripts.js"></script>
+    <script src="/js/scripts.js"></script>
 
 </body>
 
