--- a/fiction-books.html
+++ b/fiction-books.html
@@ -10,7 +10,7 @@
         href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="/main.css">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
             </button>
             <div class="collapse navbar-collapse" id="main-navigation">
                 <a class="navbar-brand ml-0 ml-md-5"
-                    href="index.html"><strong>PANHUMAN</strong>
+                    href="/index.html"><strong>PANHUMAN</strong>
                     BOOKS</a>
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item dropdown">
@@ -31,9 +31,9 @@
                             data-toggle="dropdown" href="#" role="button"
                             aria-haspopup="true" aria-expanded="false">Age</a>
                             <div class="dropdown-menu">
-                                <a class="dropdown-item" href="children-books.html">Children</a>
-                                <a class="dropdown-item" href="teens-books.html">Teens</a>
-                                <a class="dropdown-item" href="adults-books.html">Adults</a>
+                                <a class="dropdown-item" href="/children-books.html">Children</a>
+                                <a class="dropdown-item" href="/teens-books.html">Teens</a>
+                                <a class="dropdown-item" href="/adults-books.html">Adults</a>
                               </div>
                     </li>
                     <li class="nav-item dropdown">
@@ -41,9 +41,9 @@
                             data-toggle="dropdown" href="#" role="button"
                             aria-haspopup="true" aria-expanded="false">Genre</a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="biography-books.html">Biography</a>
-                            <a class="dropdown-item" href="fiction-books.html">Fiction</a>
-                            <a class="dropdown-item" href="poetry-books.html">Poetry</a>
+                            <a class="dropdown-item" href="/biography-books.html">Biography</a>
+                            <a class="dropdown-item" href="/fiction-books.html">Fiction</a>
+                            <a class="dropdown-item" href="/poetry-books.html">Poetry</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
@@ -52,9 +52,9 @@
                             aria-haspopup="true"
                             aria-expanded="false">Continent</a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Africa</a>
-                            <a class="dropdown-item" href="#">Asia</a>
-                            <a class="dropdown-item" href="#">North America</a>
+                            <a class="dropdown-item" href="/africa.html">Africa</a>
+                            <a class="dropdown-item" href="/asia.html">Asia</a>
+                            <a class="dropdown-item" href="/north-america.html">North America</a>
                         </div>
                     </li>
                 </ul>
@@ -78,61 +78,44 @@
                     <p class="lead">Please select a subgenre:</p>
                     <div class="accordion" id="accordionGenres">
                         <div class="card">
-                          <div class="card-header" id="genreOne">
+                          <div class="card-header" id="genreChildrensFiction">
                             <h2 class="card-title mb-0">
                               <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                                Children's Books About Family
+                                Children's Fiction
                               </button>
                             </h2>
                           </div>
                       
-                          <div id="collapseOne" class="collapse" aria-labelledby="genreOne" data-parent="#accordionGenres">
+                          <div id="collapseOne" class="collapse" aria-labelledby="genreChildrensFiction" data-parent="#accordionGenres">
                             <div class="card-body">
                                 <ul class="list-group list-group-flush">
-                                    <li class="list-group-item"><span class="badge badge-primary">CHILDREN: AGES 5-10</span><h3 class="card-title"><a href="#">A Family Is a Family Is a Family</a></h3>
+                                    <li class="list-group-item"><span><a href="/children-books.html" class="badge badge-primary">CHILDREN: AGES 5-10</a></span><h3 class="card-title"><a href="/books/children/a-family-is-a-family-is-a-family-by-sara-oleary.html">A Family Is a Family Is a Family</a></h3>
                                         <h4 class="card-subtitle">by Sara O'Leary</h4>
                                      </li>
+                                     <li class="list-group-item"><span><a href="/children-books.html" class="badge badge-primary">CHILDREN: AGES 10 & UP</a></span><h3 class="card-title"><a href="/books/children/a-family-is-a-family-is-a-family-by-sara-oleary.html">Fish in a Tree</a></h3>
+                                      <h4 class="card-subtitle">by Lynda Mullaly Hunt</h4>
+                                   </li>
+                                   <li class="list-group-item"><span><a href="/children-books.html" class="badge badge-primary">CHILDREN: AGES 3-5</a></span><h3 class="card-title"><a href="/books/children/a-family-is-a-family-is-a-family-by-sara-oleary.html">When Charley Met Emma</a></h3>
+                                    <h4 class="card-subtitle">by Amy Webb</h4>
+                                 </li>
                                 </ul>
                             </div>
                           </div>
                         </div>
 
                         <div class="card">
-                          <div class="card-header" id="genreTwo">
-                            <h2 class="mb-0">
-                              <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                Children's Books About Friendship
-                              </button>
-                            </h2>
-                          </div>
-
-                          <div id="collapseTwo" class="collapse" aria-labelledby="genreTwo" data-parent="#accordionGenres">
-                            <div class="card-body">
-                                <ul class="list-group list-group-flush">
-                                    <li class="list-group-item"><span class="badge badge-primary">CHILDREN: AGES 3-5</span><h3 class="card-title"><a href="#">When Charley Met Emma</a></h3>
-                                        <h4 class="card-subtitle">by Amy Webb</h4>
-                                     </li>
-                                     <li class="list-group-item"><span class="badge badge-primary">CHILDREN: AGES 10 & UP</span><h3 class="card-title"><a href="#">Fish in a Tree</a></h3>
-                                        <h4 class="card-subtitle">by Lynda Mullaly Hunt</h4>
-                                     </li>
-                                </ul>
-                            </div>
-                          </div>
-                        </div>
-
-                        <div class="card">
-                            <div class="card-header" id="genreThree">
+                            <div class="card-header" id="genreHistoricalFiction">
                               <h2 class="mb-0">
-                                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                                   Historical Fiction
                                 </button>
                               </h2>
                             </div>
   
-                            <div id="collapseThree" class="collapse" aria-labelledby="genreThree" data-parent="#accordionGenres">
+                            <div id="collapseTwo" class="collapse" aria-labelledby="genreHistoricalFiction" data-parent="#accordionGenres">
                               <div class="card-body">
                                   <ul class="list-group list-group-flush">
-                                      <li class="list-group-item"> <span class="badge badge-secondary">ADULTS</span><h3 class="card-title"><a href="#">Things Fall Apart</a></h3>
+                                      <li class="list-group-item"><span><a href="/adults-books.html" class="badge badge-secondary">ADULTS</a></span><h3 class="card-title"><a href="/books/adults/things-fall-apart-by-chinua-achebe.html">Things Fall Apart</a></h3>
                                           <h4 class="card-subtitle">by Chinua Achebe</h4></li>
                                   </ul>
                               </div>
@@ -140,18 +123,18 @@
                           </div>
 
                           <div class="card">
-                            <div class="card-header" id="genreFour">
+                            <div class="card-header" id="genreRealisticFiction">
                               <h2 class="mb-0">
-                                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                                   Realistic Fiction
                                 </button>
                               </h2>
                             </div>
   
-                            <div id="collapseFour" class="collapse" aria-labelledby="genreFour" data-parent="#accordionGenres">
+                            <div id="collapseThree" class="collapse" aria-labelledby="genreRealisticFiction" data-parent="#accordionGenres">
                               <div class="card-body">
                                   <ul class="list-group list-group-flush">
-                                      <li class="list-group-item"> <span class="badge badge-success">TEENS</span><h3 class="card-title"><a href="#">The Dangerous Art of Blending In</a></h3>
+                                      <li class="list-group-item"><span><a href="/teens-books.html" class="badge badge-success">TEENS</a></span><h3 class="card-title"><a href="/books/teens/the-dangerous-art-of-blending-in-by-angelo-surmelis.html">The Dangerous Art of Blending In</a></h3>
                                           <h4 class="card-subtitle">by Angelo Surmelis</h4></li>
                                   </ul>
                               </div>
@@ -159,18 +142,18 @@
                           </div>
 
                           <div class="card">
-                            <div class="card-header" id="genreFive">
+                            <div class="card-header" id="genreScienceFiction">
                               <h2 class="mb-0">
-                                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
                                   Science Fiction
                                 </button>
                               </h2>
                             </div>
   
-                            <div id="collapseFive" class="collapse" aria-labelledby="genreFive" data-parent="#accordionGenres">
+                            <div id="collapseFour" class="collapse" aria-labelledby="genreScienceFiction" data-parent="#accordionGenres">
                               <div class="card-body">
                                   <ul class="list-group list-group-flush">
-                                      <li class="list-group-item"> <span class="badge badge-secondary">ADULTS</span><h3 class="card-title"><a href="#">The Three-Body Problem</a></h3>
+                                      <li class="list-group-item"><span><a href="/adults-books.html" class="badge badge-secondary">ADULTS</a></span><h3 class="card-title"><a href="/books/adults/the-three-body-problem-by-cixin-liu.html">The Three-Body Problem</a></h3>
                                           <h4 class="card-subtitle">by Cixin Liu</h4></li>
                                   </ul>
                               </div>
@@ -230,7 +213,7 @@
         integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
         crossorigin="anonymous"></script>
 
-    <script src="js/scripts.js"></script>
+    <script src="/js/scripts.js"></script>
 
 </body>
 
