--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
     integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
     crossorigin="anonymous">
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="/main.css">
 </head>
 
 <body>
@@ -24,25 +24,25 @@
       </button>
       <div class="collapse navbar-collapse" id="main-navigation">
         <a class="navbar-brand ml-0 ml-md-5"
-          href="index.html"><strong>PANHUMAN</strong>
+          href="/index.html"><strong>PANHUMAN</strong>
           BOOKS</a>
         <ul class="navbar-nav ml-auto">
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#"
               role="button" aria-haspopup="true" aria-expanded="false">Age</a>
             <div class="dropdown-menu">
-              <a class="dropdown-item" href="children-books.html">Children</a>
-              <a class="dropdown-item" href="teens-books.html">Teens</a>
-              <a class="dropdown-item" href="adults-books.html">Adults</a>
+              <a class="dropdown-item" href="/children-books.html">Children</a>
+              <a class="dropdown-item" href="/teens-books.html">Teens</a>
+              <a class="dropdown-item" href="/adults-books.html">Adults</a>
             </div>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#"
               role="button" aria-haspopup="true" aria-expanded="false">Genre</a>
             <div class="dropdown-menu">
-              <a class="dropdown-item" href="#">Biography</a>
-              <a class="dropdown-item" href="#">Fiction</a>
-              <a class="dropdown-item" href="#">Poetry</a>
+              <a class="dropdown-item" href="/biography-books.html">Biography</a>
+              <a class="dropdown-item" href="/fiction-books.html">Fiction</a>
+              <a class="dropdown-item" href="/poetry-books.html">Poetry</a>
             </div>
           </li>
           <li class="nav-item dropdown">
@@ -50,9 +50,9 @@
               role="button" aria-haspopup="true"
               aria-expanded="false">Continent</a>
             <div class="dropdown-menu">
-              <a class="dropdown-item" href="#">Africa</a>
-              <a class="dropdown-item" href="#">Asia</a>
-              <a class="dropdown-item" href="#">North America</a>
+              <a class="dropdown-item" href="/africa.html">Africa</a>
+              <a class="dropdown-item" href="/asia.html">Asia</a>
+              <a class="dropdown-item" href="/north-america.html">North America</a>
             </div>
           </li>
         </ul>
@@ -88,7 +88,7 @@
           </button>
         </div>
       </div>
-      <div class="col-12 col-lg-7"><img src="images/homepage-image.jpg" alt=""
+      <div class="col-12 col-lg-7"><img src="/images/homepage-image.jpg" alt=""
           class="img-fluid my-5"></div>
     </div>
   </header>
@@ -97,11 +97,11 @@
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
       <div class="col mb-4">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="images/a-girl-like-me.jpg"
+          <a href="/books/children/a-girl-like-me-by-angela-johnson.html"><img class="card-img-top" src="/images/a-girl-like-me.jpg"
               alt="A Girl Like Me, Book Cover"></a>
           <div class="card-body">
-            <a href="#" class="badge badge-primary">CHILDREN: AGES 5-10</a>
-            <h2 class="card-title"><a href="#">A Girl Like Me</a></h2>
+            <a href="/children-books.html" class="badge badge-primary">CHILDREN: AGES 5-10</a>
+            <h2 class="card-title"><a href="/books/children/a-girl-like-me-by-angela-johnson.html">A Girl Like Me</a></h2>
             <h3 class="card-subtitle">by Angela Johnson</h3>
             <p class="card-text">Inspiring words by acclamaimed author
               Angela
@@ -115,19 +115,19 @@
             </p>
           </div>
           <ul class="list-group list-group-flush">
-            <li class="list-group-item"><a href="#">Children's Poetry</a></li>
-            <li class="list-group-item"><a href="#">United States</a></li>
+            <li class="list-group-item"><a href="/poetry-books.html">Children's Poetry</a></li>
+            <li class="list-group-item"><a href="/north-america.html">United States</a></li>
           </ul>
         </div>
       </div>
       <div class="col mb-4">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top"
-              src="images/when-charley-met-emma.jpg"
+          <a href="/books/children/when-charley-met-emma-by-amy-webb.html"><img class="card-img-top"
+              src="/images/when-charley-met-emma.jpg"
               alt="When Charley Met Emma, Book Cover"></a>
           <div class="card-body">
-            <a href="#" class="badge badge-primary">CHILDREN: AGES 3-5</a>
-            <h2 class="card-title"><a href="">When Charley Met Emma</a></h2>
+            <a href="/children-books.html" class="badge badge-primary">CHILDREN: AGES 3-5</a>
+            <h2 class="card-title"><a href="/books/children/when-charley-met-emma-by-amy-webb.html">When Charley Met Emma</a></h2>
             <h3 class="card-subtitle">by Amy Webb</h3>
             <p class="card-text">When Charley goes to the playground and sees
               Emma, a girl with limb differences who gets around in a
@@ -144,20 +144,19 @@
               is different from them.</p>
           </div>
           <ul class="list-group list-group-flush">
-            <li class="list-group-item"><a href="#">Children's Books About
-                Friendship</a></li>
-            <li class="list-group-item"><a href="#">United States</a></li>
+            <li class="list-group-item"><a href="/fiction-books.html">Children's Fiction</a></li>
+            <li class="list-group-item"><a href="/north-america.html">United States</a></li>
           </ul>
         </div>
       </div>
       <div class="col mb-4">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top"
-              src="images/things-fall-apart.jpg"
+          <a href="/books/adults/things-fall-apart-by-chinua-achebe.html"><img class="card-img-top"
+              src="/images/things-fall-apart.jpg"
               alt="Things Fall Apart, Book Cover"></a>
           <div class="card-body">
-            <a href="#" class="badge badge-secondary">ADULTS</a>
-            <h2 class="card-title"><a href="">Things Fall Apart</a></h2>
+            <a href="/adults-books.html" class="badge badge-secondary">ADULTS</a>
+            <h2 class="card-title"><a href="/books/adults/things-fall-apart-by-chinua-achebe.html">Things Fall Apart</a></h2>
             <h3 class="card-subtitle">by Chinua Achebe</h3>
             <p class="card-text">Translated into 57 languages, <em>Things
                 Fall
@@ -171,19 +170,19 @@
               contemporary realities.</p>
           </div>
           <ul class="list-group list-group-flush">
-            <li class="list-group-item"><a href="#">Historical Fiction</a></li>
-            <li class="list-group-item"><a href="#">Nigeria</a></li>
+            <li class="list-group-item"><a href="/fiction-books.html">Historical Fiction</a></li>
+            <li class="list-group-item"><a href="/africa.html">Nigeria</a></li>
           </ul>
         </div>
       </div>
       <div class="col mb-4">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top"
-              src="images/the-three-body-problem.jpg"
+          <a href="/books/adults/the-three-body-problem-by-cixin-liu.html"><img class="card-img-top"
+              src="/images/the-three-body-problem.jpg"
               alt="The Three-Body Problem, Book Cover"></a>
           <div class="card-body">
-            <a href="#" class="badge badge-secondary">ADULTS</a>
-            <h2 class="card-title"><a href="#">The Three-Body Problem</a></h2>
+            <a href="/adults-books.html" class="badge badge-secondary">ADULTS</a>
+            <h2 class="card-title"><a href="/books/adults/the-three-body-problem-by-cixin-liu.html">The Three-Body Problem</a></h2>
             <h3 class="card-subtitle">by Cixin Liu</h3>
             <p class="card-text"><em>The Three-Body Problem</em> is the
               first
@@ -200,19 +199,19 @@
               destruction captures the signal and plans to invade Earth.</p>
           </div>
           <ul class="list-group list-group-flush">
-            <li class="list-group-item"><a href="#">Science Fiction</a></li>
-            <li class="list-group-item"><a href="#">China</a></li>
+            <li class="list-group-item"><a href="/fiction-books.html">Science Fiction</a></li>
+            <li class="list-group-item"><a href="/asia.html">China</a></li>
           </ul>
         </div>
       </div>
       <div class="col mb-4">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top"
-              src="images/i-know-why-the-caged-bird-sings.jpg"
+          <a href="/books/adults/i-know-why-the-caged-bird-sings-by-maya-angelou.html"><img class="card-img-top"
+              src="/images/i-know-why-the-caged-bird-sings.jpg"
               alt="I Know Why The Caged Bird Sings, Book Cover"></a>
           <div class="card-body">
-            <a href="#" class="badge badge-secondary">ADULTS</a>
-            <h2 class="card-title"><a href="">I Know Why The Caged Bird
+            <a href="/adults-books.html" class="badge badge-secondary">ADULTS</a>
+            <h2 class="card-title"><a href="/books/adults/i-know-why-the-caged-bird-sings-by-maya-angelou.html">I Know Why The Caged Bird
                 Sings</a>
             </h2>
             <h3 class="card-subtitle">by Maya Angelou</h3>
@@ -232,19 +231,19 @@
             </p>
           </div>
           <ul class="list-group list-group-flush">
-            <li class="list-group-item"><a href="#">Autobiography</a></li>
-            <li class="list-group-item"><a href="#">United States</a></li>
+            <li class="list-group-item"><a href="/biography-books.html">Autobiography</a></li>
+            <li class="list-group-item"><a href="/north-america.html">United States</a></li>
           </ul>
         </div>
       </div>
       <div class="col mb-4">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top"
-              src="images/a-family-is-a-family-is-a-family.jpg"
+          <a href="/books/children/a-family-is-a-family-is-a-family-by-sara-oleary.html"><img class="card-img-top"
+              src="/images/a-family-is-a-family-is-a-family.jpg"
               alt="A Family Is a Family Is a Family, Book Cover"></a>
           <div class="card-body">
-            <a href="#" class="badge badge-primary">CHILDREN: AGES 5-10</a>
-            <h2 class="card-title"><a href="">A Family Is a Family Is a
+            <a href="/children-books.html" class="badge badge-primary">CHILDREN: AGES 5-10</a>
+            <h2 class="card-title"><a href="/books/children/a-family-is-a-family-is-a-family-by-sara-oleary.html">A Family Is a Family Is a
                 Family</a>
             </h2>
             <h3 class="card-subtitle">by Sara O'Leary</h3>
@@ -268,20 +267,19 @@
               full of caring people, her family is special.</p>
           </div>
           <ul class="list-group list-group-flush">
-            <li class="list-group-item"><a href="#">Children's Books About
-                Family</a></li>
-            <li class="list-group-item"><a href="#">Canada</a></li>
+            <li class="list-group-item"><a href="/fiction-books.html">Children's Fiction</a></li>
+            <li class="list-group-item"><a href="/north-america.html">Canada</a></li>
           </ul>
         </div>
       </div>
       <div class="col mb-4">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top"
-              src="images/warriors-dont-cry.jpg"
+          <a href="/books/teens/warriors-dont-cry-by-melba-pattillo-beals.html"><img class="card-img-top"
+              src="/images/warriors-dont-cry.jpg"
               alt="Warriors Don't Cry, Book Cover"></a>
           <div class="card-body">
-            <a href="#" class="badge badge-success">TEENS</a>
-            <h2 class="card-title"><a href="#">Warriors Don't Cry</a></h2>
+            <a href="/teens-books.html" class="badge badge-success">TEENS</a>
+            <h2 class="card-title"><a href="/books/teens/warriors-dont-cry-by-melba-pattillo-beals.html">Warriors Don't Cry</a></h2>
             <h3 class="card-subtitle">by Melba Pattillo Beals</h3>
             <p class="card-text">In 1957, well before Martin Luther King’s
               “I
@@ -303,19 +301,19 @@
               and courage, and refused to back down.</p>
           </div>
           <ul class="list-group list-group-flush">
-            <li class="list-group-item"><a href="#">Biography</a></li>
-            <li class="list-group-item"><a href="#">United States</a></li>
+            <li class="list-group-item"><a href="/biography-books.html">Biography</a></li>
+            <li class="list-group-item"><a href="/north-america.html">United States</a></li>
           </ul>
         </div>
       </div>
       <div class="col mb-4">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top"
-              src="images/the-dangerous-art-of-blending.jpg"
+          <a href="/books/teens/the-dangerous-art-of-blending-in-by-angelo-surmelis.html"><img class="card-img-top"
+              src="/images/the-dangerous-art-of-blending.jpg"
               alt="The Dangerous Art of Blending In"></a>
           <div class="card-body">
-            <a href="#" class="badge badge-success">TEENS</a>
-            <h2 class="card-title"><a href="#">The Dangerous Art of Blending
+            <a href="/teens-books.html" class="badge badge-success">TEENS</a>
+            <h2 class="card-title"><a href="/books/teens/the-dangerous-art-of-blending-in-by-angelo-surmelis.html">The Dangerous Art of Blending
                 In</a></h2>
             <h3 class="card-subtitle">by Angelo Surmelis</h3>
             <p class="card-text">Evan Panos's strict immigrant Greek mother
@@ -340,18 +338,18 @@
               step into his light.</p>
           </div>
           <ul class="list-group list-group-flush">
-            <li class="list-group-item"><a href="#">Realistic Fiction</a></li>
-            <li class="list-group-item"><a href="#">United States</a></li>
+            <li class="list-group-item"><a href="/fiction-books.html">Realistic Fiction</a></li>
+            <li class="list-group-item"><a href="/north-america.html">United States</a></li>
           </ul>
         </div>
       </div>
       <div class="col mb-4">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="images/fish-in-a-tree.jpg"
+          <a href="/books/children/fish-in-a-tree-by-lynda-mullaly-hunt.html"><img class="card-img-top" src="/images/fish-in-a-tree.jpg"
               alt="Fish in a Tree, Book Cover"></a>
           <div class="card-body">
-            <a href="#" class="badge badge-primary">CHILDREN: AGES 10 & UP</a>
-            <h2 class="card-title"><a href="#">Fish in a Tree</a></h2>
+            <a href="/children-books.html" class="badge badge-primary">CHILDREN: AGES 10 & UP</a>
+            <h2 class="card-title"><a href="/books/children/fish-in-a-tree-by-lynda-mullaly-hunt.html">Fish in a Tree</a></h2>
             <h3 class="card-subtitle">by Lynda Mullaly Hunt</h3>
             <p class="card-text">Ally has been smart enough to fool a lot of
               smart
@@ -375,9 +373,8 @@
               label, and that great minds don’t always think alike.</p>
           </div>
           <ul class="list-group list-group-flush">
-            <li class="list-group-item"><a href="#">Children's Books About
-                Friendship</a></li>
-            <li class="list-group-item"><a href="#">United States</a></li>
+            <li class="list-group-item"><a href="/fiction-books.html">Children's Fiction</a></li>
+            <li class="list-group-item"><a href="/north-america.html">United States</a></li>
           </ul>
         </div>
       </div>
@@ -484,7 +481,7 @@
     integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
     crossorigin="anonymous"></script>
 
-  <script src="js/scripts.js" defer></script>
+  <script src="/js/scripts.js" defer></script>
 
 </body>
 
