--- a/poetry-books.html
+++ b/poetry-books.html
@@ -10,7 +10,7 @@
         href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="/main.css">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
             </button>
             <div class="collapse navbar-collapse" id="main-navigation">
                 <a class="navbar-brand ml-0 ml-md-5"
-                    href="index.html"><strong>PANHUMAN</strong>
+                    href="/index.html"><strong>PANHUMAN</strong>
                     BOOKS</a>
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item dropdown">
@@ -31,9 +31,9 @@
                             data-toggle="dropdown" href="#" role="button"
                             aria-haspopup="true" aria-expanded="false">Age</a>
                             <div class="dropdown-menu">
-                                <a class="dropdown-item" href="children-books.html">Children</a>
-                                <a class="dropdown-item" href="teens-books.html">Teens</a>
-                                <a class="dropdown-item" href="adults-books.html">Adults</a>
+                                <a class="dropdown-item" href="/children-books.html">Children</a>
+                                <a class="dropdown-item" href="/teens-books.html">Teens</a>
+                                <a class="dropdown-item" href="/adults-books.html">Adults</a>
                               </div>
                     </li>
                     <li class="nav-item dropdown">
@@ -41,9 +41,9 @@
                             data-toggle="dropdown" href="#" role="button"
                             aria-haspopup="true" aria-expanded="false">Genre</a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="biography-books.html">Biography</a>
-                            <a class="dropdown-item" href="fiction-books.html">Fiction</a>
-                            <a class="dropdown-item" href="poetry-books.html">Poetry</a>
+                            <a class="dropdown-item" href="/biography-books.html">Biography</a>
+                            <a class="dropdown-item" href="/fiction-books.html">Fiction</a>
+                            <a class="dropdown-item" href="/poetry-books.html">Poetry</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
@@ -52,9 +52,9 @@
                             aria-haspopup="true"
                             aria-expanded="false">Continent</a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Africa</a>
-                            <a class="dropdown-item" href="#">Asia</a>
-                            <a class="dropdown-item" href="#">North America</a>
+                            <a class="dropdown-item" href="/africa.html">Africa</a>
+                            <a class="dropdown-item" href="/asia.html">Asia</a>
+                            <a class="dropdown-item" href="/north-america.html">North America</a>
                         </div>
                     </li>
                 </ul>
@@ -78,7 +78,7 @@
                     <p class="lead">Please select a subgenre:</p>
                     <div class="accordion" id="accordionGenres">
                         <div class="card">
-                          <div class="card-header" id="genreOne">
+                          <div class="card-header" id="genreChildrensPoetry">
                             <h2 class="card-title mb-0">
                               <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                                 Children's Poetry
@@ -86,10 +86,10 @@
                             </h2>
                           </div>
                       
-                          <div id="collapseOne" class="collapse" aria-labelledby="genreOne" data-parent="#accordionGenres">
+                          <div id="collapseOne" class="collapse" aria-labelledby="genreChildrensPoetry" data-parent="#accordionGenres">
                             <div class="card-body">
                                 <ul class="list-group list-group-flush">
-                                    <li class="list-group-item"><span class="badge badge-primary">CHILDREN: AGES 5-10</span><h3 class="card-title"><a href="#">A Girl Like Me</a></h3>
+                                    <li class="list-group-item"><span><a href="/children-books.html" class="badge badge-primary">CHILDREN: AGES 5-10</a></span><h3 class="card-title"><a href="/books/children/a-girl-like-me-by-angela-johnson.html">A Girl Like Me</a></h3>
                                         <h4 class="card-subtitle">by Angela Johnson</h4>
                                      </li>
                                 </ul>
@@ -150,7 +150,7 @@
         integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
         crossorigin="anonymous"></script>
 
-    <script src="js/scripts.js"></script>
+    <script src="/js/scripts.js"></script>
 
 </body>
 
