--- a/teens-books.html
+++ b/teens-books.html
@@ -10,7 +10,7 @@
         href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="/main.css">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
             </button>
             <div class="collapse navbar-collapse" id="main-navigation">
                 <a class="navbar-brand ml-0 ml-md-5"
-                    href="index.html"><strong>PANHUMAN</strong>
+                    href="/index.html"><strong>PANHUMAN</strong>
                     BOOKS</a>
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item dropdown">
@@ -31,9 +31,9 @@
                             data-toggle="dropdown" href="#" role="button"
                             aria-haspopup="true" aria-expanded="false">Age</a>
                             <div class="dropdown-menu">
-                                <a class="dropdown-item" href="children-books.html">Children</a>
-                                <a class="dropdown-item" href="teens-books.html">Teens</a>
-                                <a class="dropdown-item" href="adults-books.html">Adults</a>
+                                <a class="dropdown-item" href="/children-books.html">Children</a>
+                                <a class="dropdown-item" href="/teens-books.html">Teens</a>
+                                <a class="dropdown-item" href="/adults-books.html">Adults</a>
                               </div>
                     </li>
                     <li class="nav-item dropdown">
@@ -41,9 +41,9 @@
                             data-toggle="dropdown" href="#" role="button"
                             aria-haspopup="true" aria-expanded="false">Genre</a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Biography</a>
-                            <a class="dropdown-item" href="#">Fiction</a>
-                            <a class="dropdown-item" href="#">Poetry</a>
+                            <a class="dropdown-item" href="/biography-books.html">Biography</a>
+                            <a class="dropdown-item" href="/fiction-books.html">Fiction</a>
+                            <a class="dropdown-item" href="/poetry-books.html">Poetry</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
@@ -52,9 +52,9 @@
                             aria-haspopup="true"
                             aria-expanded="false">Continent</a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Africa</a>
-                            <a class="dropdown-item" href="#">Asia</a>
-                            <a class="dropdown-item" href="#">North America</a>
+                            <a class="dropdown-item" href="/africa.html">Africa</a>
+                            <a class="dropdown-item" href="/asia.html">Asia</a>
+                            <a class="dropdown-item" href="/north-america.html">North America</a>
                         </div>
                     </li>
                 </ul>
@@ -77,9 +77,9 @@
                         <div class="card">
                             <div class="card-body">
                                 <ul class="list-group list-group-flush">
-                                    <li class="list-group-item"><h3 class="card-title"><a href="#">Warriors Don't Cry</a></h3>
+                                    <li class="list-group-item"><h3 class="card-title"><a href="/books/teens/warriors-dont-cry-by-melba-pattillo-beals.html">Warriors Don't Cry</a></h3>
                                         <h4 class="card-subtitle">by Melba Pattillo Beals</h4></li>
-                                    <li class="list-group-item"><h3 class="card-title"><a href="#">The Dangerous Art of Blending In</a></h3>
+                                    <li class="list-group-item"><h3 class="card-title"><a href="/books/teens/the-dangerous-art-of-blending-in-by-angelo-surmelis.html">The Dangerous Art of Blending In</a></h3>
                                         <h4 class="card-subtitle">by Angelo Surmelis</h4></li>
                                 </ul>
                             </div>
@@ -136,7 +136,7 @@
         integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
         crossorigin="anonymous"></script>
 
-    <script src="js/scripts.js"></script>
+    <script src="/js/scripts.js"></script>
 
 </body>
 
